/*
 * Copyright (C) 2021 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package com.google.companionprotos;

option java_package = "com.google.android.companionprotos";

option java_multiple_files = true;

// Potential system query types.
enum SystemQueryType {
  // The contents of the payload are unknown.
  //
  // Note, this enum name is prefixed. See
  // go/proto-best-practices-checkers#enum-default-value-name-conflict
  SYSTEM_QUERY_TYPE_UNKNOWN = 0;

  // Query that returns the name of the device.
  DEVICE_NAME = 1;

  // Name of the mobile companion application.
  APP_NAME = 2;
}

// Definition proto for a system query.
message SystemQuery {
  // Type indication for this query.
  SystemQueryType type = 1;
}
